--- a/index.html
+++ b/index.html
@@ -228,10 +228,12 @@
             <h2 class="heading">Serviços</h2>
 
             <div class="slider">
-                <i class="fa-solid fa-circle-arrow-left arrow-btn-left gradient-icon"></i>
-                
-                <i class="fa-solid fa-circle-arrow-right arrow-btn-right gradient-icon"></i>
-                
+                <button class="slider-btn left">
+                    <i class="fa-solid fa-circle-arrow-left arrow-btn-left gradient-icon"></i>
+                </button>
+                <button class="slider-btn right">
+                    <i class="fa-solid fa-circle-arrow-right arrow-btn-right gradient-icon"></i>
+                </button>
 
                 <article class="slide active-right">
                     <img src="./assets/svgs/programming.svg" class="dev-icon" alt="Dev Icon">
