--- a/index.html
+++ b/index.html
@@ -151,21 +151,20 @@
                         <i class="devicon-javascript-plain gradient-icon"></i>
                     </div>
                     <div class="link-container">
-                        <a href="https://github.com/xDef4lt/quimicafacil"  target="_blank" class="botao-link">Acessar código</a>
+                        <a href="https://github.com/Its-JustMe/quimicafacil"  target="_blank" class="botao-link">Acessar código</a>
                         <a href="https://quimicafacil.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
                     </div>
                 </div>
 
                 <div class="project-container">
-                    <img class="img-projeto" src="./assets/imgs/projects_imgs/login.png" alt="Projeto Tela de Login">
+                    <img class="img-projeto" src="./assets/imgs/projects_imgs/previsao-do-tempo.png" alt="Projeto Tela de Login">
                     <div class="project-info">
-                        <h3>Tela de Login</h3>
-                        <i class="devicon-html5-plain gradient-icon"></i>
-                        <i class="devicon-css3-plain gradient-icon"></i>  
+                        <h3>Previsão do Tempo</h3>
+                        <i class="devicon-javascript-plain gradient-icon"></i> 
                     </div>
                     <div class="link-container">
-                        <a href="https://github.com/xDef4lt/login-animado" target="_blank" class="botao-link">Acessar código</a>
-                        <a href="https://login-animado-liart.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
+                        <a href="https://github.com/Its-JustMe/previsaoDoTempo" target="_blank" class="botao-link">Acessar código</a>
+                        <a href="https://previsao-do-tempo-jet.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
                     </div>
                 </div>
 
@@ -178,22 +177,22 @@
                         <i class="devicon-javascript-plain gradient-icon"></i>
                     </div>
                     <div class="link-container">
-                        <a href="https://github.com/xDef4lt/calculadora-poo" target="_blank" class="botao-link">Acessar código</a>
+                        <a href="https://github.com/Its-JustMe/calculadora-poo" target="_blank" class="botao-link">Acessar código</a>
                         <a href="https://calculadora-poo.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
                     </div>
                 </div>
 
                 <div class="project-container">
-                    <img class="img-projeto" src="./assets/imgs/projects_imgs/cadastro.png" alt="Projeto Cadastro">
+                    <img class="img-projeto" src="./assets/imgs/projects_imgs/tradutor.png" alt="Projeto Cadastro">
                     <div class="project-info">
-                        <h3>Tela Cadastro</h3>
+                        <h3>Tradutor</h3>
                         <i class="devicon-html5-plain gradient-icon"></i>
                         <i class="devicon-css3-plain gradient-icon"></i>  
                         <i class="devicon-javascript-plain gradient-icon"></i>
                     </div>
                     <div class="link-container">
-                        <a href="https://github.com/xDef4lt/cadastro" target="_blank" class="botao-link">Acessar código</a>
-                        <a href="https://cadastro-ten.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
+                        <a href="https://github.com/Its-JustMe/tradutor-typescript" target="_blank" class="botao-link">Acessar código</a>
+                        <a href="https://tradutor-typescript.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
                     </div>
                 </div>
                 <div class="project-container">
@@ -205,7 +204,7 @@
                         <i class="devicon-javascript-plain gradient-icon"></i>
                     </div>
                     <div class="link-container">
-                        <a href="https://github.com/xDef4lt/slider-js" target="_blank" class="botao-link">Acessar código</a>
+                        <a href="https://github.com/Its-JustMe/slider-js" target="_blank" class="botao-link">Acessar código</a>
                         <a href="https://slider-js-ten.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
                     </div>
                 </div>
@@ -217,7 +216,7 @@
                         <i class="devicon-javascript-plain gradient-icon"></i>
                     </div>
                     <div class="link-container">
-                        <a href="https://github.com/xDef4lt/relogio" target="_blank" class="botao-link">Acessar código</a>
+                        <a href="https://github.com/Its-JustMe/relogio" target="_blank" class="botao-link">Acessar código</a>
                         <a href="https://relogio-navy.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
                     </div>
                 </div>
@@ -267,7 +266,7 @@
 
         <footer id="contacts">
             <div class="social">
-                <a href="https://github.com/xDef4lt" target="_blank"><i class="fa-brands fa-github gradient-icon"></i></a>            
+                <a href="https://github.com/Its-JustMe" target="_blank"><i class="fa-brands fa-github gradient-icon"></i></a>            
                 <a href="https://www.linkedin.com/in/arthur-santos-3b61a8267/" target="_blank"><i class="fa-brands fa-linkedin-in gradient-icon"></i></a>
                 <a href="mailto:contato.arthursantosdev@gmail.com" target="_blank"><i class="fa-solid fa-envelope gradient-icon"></i></a>             
                 <a href="https://wa.link/n2camg" target="_blank"><i class="fa-brands fa-whatsapp gradient-icon"></i></a>          
