--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </section>
 
         <section class="conteudo" id="projects" data-animar="false">
-            <h2 class="heading">Projetos</h2>
+            <h2 class="heading">Projetos Pessoais</h2>
         
             <div class="flexible-container">
                 <div class="project-container">
