--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
             <h2 class="heading">Sobre Mim</h2>
             <p>
                 Olá, me chamo Arthur Santos, tenho <span id="age" style="color: inherit">_</span> anos e sou um desenvolvedor web apaixonado por 
-                tecnologia e entusiasta de videogames; Tenho experiência em programação utilizando 
+                tecnologia; Tenho experiência em programação utilizando 
                 <strong>HTML, CSS, JavaScript, TypeScript e Python</strong>, com foco em <strong>Programação Orientada a Objetos (POO)</strong>; 
                 Meu primeiro contato com programação foi aos 14 anos, mas foi aos 16 anos, quando ingressei no curso de 
                 Informática para Internet na <abbr title="Fundação Instituto de Educação de Barueri">FIEB</abbr>, 
