--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@
                 <div class="project-container">
                     <img class="img-projeto" src="./assets/imgs/projects_imgs/previsao-do-tempo.png" alt="Projeto Tela de Login">
                     <div class="project-info">
-                        <h3>Previsão do Tempo</h3>
+                        <h3>Previsão</h3>
                         <i class="devicon-javascript-plain gradient-icon"></i> 
                     </div>
                     <div class="link-container">
