Adicionando opção de baixar o currículo

--- a/index.html
+++ b/index.html
@@ -57,9 +57,9 @@
                     <h1>Prazer, <wbr> <span>Arthur Santos</span></h1>
                     <h2 data-anima-texto>Desenvolvedor Web</h2>
                     <div class="btn-container">
-                        <a href="#" class="botao-contato btn-gradient" id="download-cv">
+                        <a href="./assets/cv/curriculo_ArthurSantos_simplificado.pdf" download="curriculo_ArthurSantos_simplificado" class="botao-contato btn-gradient" id="download-cv">
                             <span lang="en-us">Download</span> 
-                            <abbr title="Currículo Virtual">C/V</abbr>
+                            <abbr title="Curriculum vitae - Currículo">C/V</abbr>
                         </a>
                         <a href="https://www.linkedin.com/in/arthur-santos-3b61a8267/" target="_blank" class="botao-contato" id="gradient-hover">
                             LinkedIn
