--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
                 </div>
 
                 <div class="project-container">
-                    <img class="img-projeto" src="./assets/imgs/projects_imgs/tradutor.png" alt="Projeto Cadastro">
+                    <img class="img-projeto" src="./assets/imgs/projects_imgs/tradutor.png" alt="Projeto Tradutor">
                     <div class="project-info">
                         <h3>Tradutor</h3>
                         <i class="devicon-html5-plain gradient-icon"></i>
