--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                     <h1>Prazer, <wbr> <span>Arthur Santos</span></h1>
                     <h2 data-anima-texto>Desenvolvedor Web</h2>
                     <div class="btn-container">
-                        <a href="./assets/cv/curriculo_ArthurSantos_simplificado.pdf" download="curriculo_ArthurSantos_simplificado" class="botao-contato btn-gradient" id="download-cv">
+                        <a href="./assets/cv/curriculo_ArthurSantos.pdf" download="curriculo_ArthurSantos" class="botao-contato btn-gradient" id="download-cv">
                             <span lang="en-us">Download</span> 
                             <abbr title="Curriculum vitae - Currículo">C/V</abbr>
                         </a>
@@ -103,37 +103,45 @@
         <section class="conteudo" id="skills" data-animar="false">
             <h2 class="heading">Conhecimentos</h2>
             <div class="flexible-container">
-                <div class="icon-container" tabindex="1">    
+                <div class="icon-container">    
                 <i class="devicon-html5-plain"></i>
                     <h4>html5 <br> 95&#37;</h4>
                 </div>
-                <div class="icon-container" tabindex="1">                   
+                <div class="icon-container">                   
                 <i class="devicon-css3-plain"></i>      
                     <h4>css3 <br> 80&#37;</h4>
                 </div>
-                <div class="icon-container" tabindex="1">
+                <div class="icon-container">
                     <i class="devicon-javascript-plain"></i>
                     <h4>javascript <br> 65&#37;</h4>
                 </div>
-                <div class="icon-container" tabindex="1">
+                <div class="icon-container">
                     <i class="devicon-typescript-plain"></i>
                     <h4>typescript <br> 50&#37;</h4>
                 </div>
-                <div class="icon-container" tabindex="1">    
+                <div class="icon-container">    
                     <i class="devicon-bootstrap-plain"></i>
                     <h4>bootstrap <br> 20&#37;</h4>
                 </div>
-                <div class="icon-container" tabindex="1">
+                <div class="icon-container">    
+                    <i class="devicon-sass-original"></i>
+                    <h4>sass <br> 50&#37;</h4>
+                </div>
+                <div class="icon-container">
                     <i class="devicon-nodejs-plain"></i>
                     <h4>nodejs <br> 55&#37;</h4>
                 </div>
-                <div class="icon-container" tabindex="1">
+                <div class="icon-container">
                     <i class="fa-brands fa-python"></i>
                     <h4>python3 <br> 40&#37;</h4>
                 </div>
-                <div class="icon-container" tabindex="1">          
+                <div class="icon-container">          
                     <i class="devicon-figma-plain"></i>   
-                    <h4>figma <br> 10&#37;</h4>
+                    <h4>figma <br> 20&#37;</h4>
+                </div>
+                <div class="icon-container">
+                    <i class="devicon-git-plain"></i>   
+                    <h4>git/github <br> 35&#37;</h4>
                 </div>
             </div>
         </section>
