--- a/index.html
+++ b/index.html
@@ -132,6 +132,10 @@
                     <h4>nodejs <br> 55&#37;</h4>
                 </div>
                 <div class="icon-container">
+                    <i class="devicon-express-original"></i>
+                    <h4>express <br> 45&#37;</h4>
+                </div>
+                <div class="icon-container">
                     <i class="fa-brands fa-python"></i>
                     <h4>python3 <br> 40&#37;</h4>
                 </div>
@@ -141,7 +145,11 @@
                 </div>
                 <div class="icon-container">
                     <i class="devicon-git-plain"></i>   
-                    <h4>git/github <br> 35&#37;</h4>
+                    <h4>git / github <br> 35&#37;</h4>
+                </div>
+                <div class="icon-container">
+                    <i class="devicon-vscode-plain"></i>   
+                    <h4>vscode <br> 80&#37;</h4>
                 </div>
             </div>
         </section>
