--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
                     <h4>git / github <br> 35&#37;</h4>
                 </div>
                 <div class="icon-container">
-                    <i class="devicon-mysql-original"></i>   
-                    <h4>mysql <br> 30&#37;</h4>
+                    <i class="devicon-vscode-plain"></i>   
+                    <h4>vscode <br> 30&#37;</h4>
                 </div>
             </div>
         </section>
