--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             <p>
                 Estou sempre em busca de novos desafios e oportunidades para expandir meu conhecimento e contribuir para projetos emocionantes; 
                 Se você está procurando um desenvolvedor web apaixonado e comprometido, entre em contato comigo através do 
-                <strong>LinkedIn</strong> ou faça acesse meu currículo para saber mais sobre 
+                <strong>LinkedIn</strong> ou acesse meu currículo para saber mais sobre 
                 minha experiência e habilidades;
             </p>
             <p>
