--- a/index.html
+++ b/index.html
@@ -185,16 +185,16 @@
                 </div>
 
                 <div class="project-container">
-                    <img class="img-projeto" src="./assets/imgs/projects_imgs/calculadora.png" alt="Projeto Calculadora">
+                    <img class="img-projeto" src="./assets/imgs/projects_imgs/cadastro.png" alt="Projeto Calculadora">
                     <div class="project-info">
-                        <h3>Calculadora</h3>
+                        <h3>Cadastro</h3>
                         <i class="devicon-html5-plain gradient-icon"></i>
                         <i class="devicon-css3-plain gradient-icon"></i>  
                         <i class="devicon-javascript-plain gradient-icon"></i>
                     </div>
                     <div class="link-container">
-                        <a href="https://github.com/Its-JustMe/calculadora-poo" target="_blank" class="botao-link">Acessar código</a>
-                        <a href="https://calculadora-poo.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
+                        <a href="https://github.com/Its-JustMe/crud-node" target="_blank" class="botao-link">Acessar código</a>
+                        <a href="https://crud-node-haue.onrender.com/" target="_blank" class="botao-link">Acessar página</a>
                     </div>
                 </div>
 
@@ -212,16 +212,16 @@
                     </div>
                 </div>
                 <div class="project-container">
-                    <img class="img-projeto" src="./assets/imgs/projects_imgs/slider.png" alt="Projeto Slider JS">
+                    <img class="img-projeto" src="./assets/imgs/projects_imgs/movies.png" alt="Projeto Slider JS">
                     <div class="project-info">
-                        <h3>Slider</h3>
+                        <h3>Movie App</h3>
                         <i class="devicon-html5-plain gradient-icon"></i>
-                        <i class="devicon-css3-plain gradient-icon"></i>  
+                        <i class="devicon-sass-original gradient-icon"></i>  
                         <i class="devicon-javascript-plain gradient-icon"></i>
                     </div>
                     <div class="link-container">
-                        <a href="https://github.com/Its-JustMe/slider-js" target="_blank" class="botao-link">Acessar código</a>
-                        <a href="https://slider-js-ten.vercel.app/" target="_blank" class="botao-link">Acessar página</a>
+                        <a href="https://github.com/Its-JustMe/movie-app" target="_blank" class="botao-link">Acessar código</a>
+                        <a href="https://its-justme.github.io/movie-app/" target="_blank" class="botao-link">Acessar página</a>
                     </div>
                 </div>
                 <div class="project-container">
